[tool.poetry]
name = "rafood-api"
version = "0.1.0"
description = "API to handle Rafood operations"
authors = ["rafael.emery <rafael.emery@olist.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.7.1"}
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.29"
psycopg-binary = "^3.1.18"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
sqlalchemy-utils = "^0.41.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
ruff = "^0.14.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
