[tool.poetry]
name = "rafood-api"
version = "0.1.0"
description = "API to handle Rafood operations"
authors = ["rafael.emery <rafael.emery@olist.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.7.1"}
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.29"
psycopg-binary = "^3.1.18"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
sqlalchemy-utils = "^0.41.2"
pytest = "^9.0.1"
psycopg = {extras = ["binary"], version = "^3.2.12"}
sqlmodel = "^0.0.27"
pytest-asyncio = "^1.3.0"
prometheus-fastapi-instrumentator = "^7.1.0"
prometheus-client = "^0.23.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
ruff = "^0.14.5"
psycopg2-binary = "^2.9.11"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3.0"
factory-boy = "^3.3.3"
locust = "^2.43.1"


[tool.poetry.group.test.dependencies]
faker = "^38.2.0"
pytest-mock = "^3.15.1"
httpx = "^0.28.1"
asgi-lifespan = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
# Enabled rules
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "B",     # flake8-bugbear (common bugs)
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade (modern syntax)
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "N",     # pep8-naming
    "ASYNC", # flake8-async (async best practices)
    "S",     # flake8-bandit (security)
]

# Ignored rules
ignore = [
    "E501",   # line too long (already configured in line-length)
    "B008",   # do not perform function calls in argument defaults (common in FastAPI)
    "S101",   # use of assert detected
    "ARG001", # unused function argument (useful in dependencies)
    "ARG002", # unused *args
    "W191",  # indentation contains tabs (we use tabs for indentation)
]

# Allow auto-fix for some rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Ignore unused imports in __init__.py
"__init__.py" = ["F401"]
# Ignore security rules in tests
"tests/**/*.py" = ["S", "ARG"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
skip-magic-trailing-comma = false
